tests/rosetta/transpiler/Elixir/equilibrium-index.error
run: exit status 1
     error: undefined function _now/0 (there is no such import)
     │
 200 │ Process.put(:seed, rem(_now(), 2147483647))
     │                        ^
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/equilibrium-index.exs:200:24

** (CompileError) /workspace/mochi/tests/rosetta/transpiler/Elixir/equilibrium-index.exs: cannot compile file (errors have been logged)

